--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool]
 
 [tool.poetry]
-authors = ["Nateu"]
+authors = ["NateuCodes"]
 description = "BDD python"
 name = "root"
 version = "0.0.1"
@@ -10,6 +10,7 @@ version = "0.0.1"
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
-mamba = "==0.11.2"
+coverage = "^5.5"
 expects = "^0.9.0"
+mamba = "^0.11.2"
 pytest = "==6.0.0"
